--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ SubmarineExplorer/ProjectSettings/
 SubmarineExplorer/Temp/*
 SubmarineExplorer/.vs/
 SubmarineExplorer/Assets/Wwise/Deployment/
+SubmarineExplorer/SubmarineExplorer_WwiseProject/.cache
